--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -18,5 +18,5 @@ jobs:
       - name: python command
         run: |
           import platform
-          print(plaform.processor())
+          print(platform.processor())
         shell: python
