--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -7,23 +7,10 @@ jobs:
   run-shell-commands:
     runs-on: ubuntu-latest
     steps:
-      - name: echo string
-        run: echo "Hello"
-      - name: Multi line string
+      - name: checkout
+        uses: actions/checkout@v1
         run:  |
           pwd
-          node -v
           ls -a
           who
-      - name: python command
-        run: |
-          import platform
-          print(platform.processor())
-        shell: python
-  run-windows-commands:
-    runs-on: windows-latest
-    needs: ["run-shell-commands"]
-    steps:
-      - name: Directory
-        run:  PWD
-        shell: bash
+
