--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -4,7 +4,7 @@ on:
   - push
 
 jobs:
-  run-shell-commands:
+  terraform-workflow:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -15,6 +15,8 @@ jobs:
           terraform_version: 1.1.9
       - name: Terraform init
         run:  terraform init
+      - name: Terraform validate
+        run:  terraform validate
       - name: Multi line string
         run:  |
           pwd
