--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -23,6 +23,10 @@ jobs:
         run:  terraform validate
       - name: Terraform plan
         run:  terraform plan
+      - name: Terraform apply
+        run: terraform apply
+      - name: Terraform destroy
+        run: terraform destroy
       - name: Multi line string
         run:  |
           pwd
