--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -23,8 +23,10 @@ jobs:
         run:  terraform validate
       - name: Terraform plan
         run:  terraform plan
+      - name: Terraform apply
+        run: terraform apply --auto-approve
       - name: Terraform destroy
-        run: terraform destroy -target="aws_vpc".vpc-07405e215174debff --auto-approve
+        run: terraform destroy --auto-approve
       - name: Multi line string
         run:  |
           pwd
